# nnyy-player

./: .gitignore  history.html  nnyy_player.html  package.json  server.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
